add fetch functions

--- a/index.html
+++ b/index.html
@@ -20,5 +20,12 @@
         </div>
         <input type="search" placeholder="Search for a Pokémon..." class="search-input">
     </header>
+    <section class="content-container">
+        <div class="poke-cards-container" id="poke-cards-container">
+        </div>
+        <section class="load-button-container">
+            <button class="load-button" onclick="loadMorePokemons()">Load more...</button>
+        </section>
+    </section>
 </body>
 </html>
