add detail cards

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <section class="content-container">
         <div class="poke-cards-container" id="poke-cards-container">
         </div>
+        <div class="poke-details-container" id="poke-details-container">
+            
+        </div>
         <section class="load-button-container">
             <button class="load-button" onclick="loadMorePokemons()">Load more...</button>
         </section>
