--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <script src="script.js"></script>
 </head>
 <body onload="init()">
+    <div id="spinner-overlay">
+      <img src="./assets/img/pokeball.png" alt="Lade Pokéball" class="spinner-pokeball">
+    </div>
     <header class="header-container">
         <div class="header-left">
         <img src="./assets/img/pokeball.png" alt="Pokéball" class="pokeball-img">
