enhance performance and add footer

--- a/index.html
+++ b/index.html
@@ -30,8 +30,12 @@
             
         </div>
         <section class="load-button-container">
-            <button class="load-button" onclick="loadMorePokemons()">Load more...</button>
+            <button id="load-button" class="load-button" onclick="loadMorePokemons()">Load more...</button>
         </section>
     </section>
+    <footer class="footer-container" id="footer-container">
+        <p>Pokédex by <a href="https://github.com/valentinpersche/Pokedex_DA.git">Valentin Persche</a></p>
+        <p>Data from <a href="https://pokeapi.co/">PokeAPI</a></p>
+    </footer>
 </body>
 </html>
